--- a/INSTALL
+++ b/INSTALL
@@ -1,8 +1,19 @@
-make
-make install
+= Configure it =
+
+./waf configure
+
+you can use --lv2-dir to force installation directory
+
+= Build it =
+
+./waf
+
+= Install it =
+
+./waf install
 
 You probably want to run later as superuser to install plugin
 system-wide
 
 Installation will try to deduce where to install from your LV2_PATH
-unless you override it using LV2_INSTALL_PATH
+unless you specified --lv2-dir during configure stage
